--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -329,6 +329,8 @@ battery = BAT0
 adapter = ADP1
 full-at = 98
 
+time-format = %H:%M
+
 format-charging = <animation-charging> <label-charging>
 format-charging-underline = #ffb52a
 
