--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,13 +7,13 @@ map shift+space _
 # snazzy theme used as base
 
 foreground            #ebdbb2
-background            #272727
+background            #1d2021
 selection_foreground  #655b53
 selection_background  #ebdbb2
 url_color             #d65c0d
 
 # black
-color0   #272727
+color0   #1d2021
 color8   #928373
 
 # red
