--- a/bat/.config/bat/config
+++ b/bat/.config/bat/config
@@ -1,5 +1,5 @@
 # Set the theme to "TwoDark"
---theme="GitHub"
+# --theme="GitHub"
 
 # Use italic text on the terminal (not supported on all terminals)
 --italic-text=always
