--- a/bat/.config/bat/config
+++ b/bat/.config/bat/config
@@ -1,6 +1,6 @@
 # Set the theme to "TwoDark"
 #--theme="GitHub"
---theme="Zenburn"
+#--theme=""
 
 # Use italic text on the terminal (not supported on all terminals)
 --italic-text=always
