--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,10 @@
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal tmux-256color
+set -ga terminal-overrides ",xterm-256color:RGB"
 
 set -sg escape-time 0
 
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind j split-window -c "#{pane_current_path}"
+bind l split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Smart pane switching with awareness of Vim splits.
