--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -3,14 +3,14 @@
 # Fonts
 font:
     normal:
-        family: Ubuntu Mono
-    size: 14
+        family: Iosevka Term
+    size: 13
 
 # Starting window size
 window:
   dimensions:
     columns: 100
-    lines: 40
+    lines: 35
   padding:
     x: 0
     y: 0
