--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -14,7 +14,7 @@ window:
   padding:
     x: 0
     y: 0
-  gtk_theme_variant: dark
+  gtk_theme_variant: light
 
 env:
   TERM: xterm-256color
@@ -76,5 +76,5 @@ schemes:
       cyan:    '0x8ec07c'
       white:   '0xebdbb2'
 
-colors: *dark
+colors: *light
 
