--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -3,18 +3,18 @@
 # Fonts
 font:
     normal:
-        family: Iosevka Term
-    size: 13
+        family: Fira Code
+    size: 12
 
 # Starting window size
 window:
   dimensions:
     columns: 100
-    lines: 35
+    lines: 40
   padding:
     x: 0
     y: 0
-  gtk_theme_variant: dark
+  gtk_theme_variant: light
 
 env:
   TERM: xterm-256color
@@ -76,5 +76,5 @@ schemes:
       cyan:    '0x8ec07c'
       white:   '0xebdbb2'
 
-colors: *dark
+colors: *light
 
