--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -3,8 +3,8 @@
 # Fonts
 font:
     normal:
-        family: Fira Code
-    size: 12
+        family: Ubuntu Mono
+    size: 14
 
 # Starting window size
 window:
