--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -2,9 +2,9 @@
 #
 # Fonts
 font:
-    normal:
-        family: Ubuntu Mono
-    size: 14
+  normal:
+    family: Ubuntu Mono
+  size: 14
 
 # Starting window size
 window:
@@ -14,8 +14,14 @@ window:
   padding:
     x: 0
     y: 0
-  gtk_theme_variant: light
+  gtk_theme_variant: dark
 
+# Disable cursor blinking
+cursor:
+  style:
+    blinking: Never
+
+# Fix tmux neovim colors
 env:
   TERM: xterm-256color
 
@@ -76,5 +82,5 @@ schemes:
       cyan:    '0x8ec07c'
       white:   '0xebdbb2'
 
-colors: *light
+colors: *dark
 
