--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -3,7 +3,7 @@
 # Fonts
 font:
   normal:
-    family: Fira Mono Medium
+    family: Fira Mono
   size: 12
 
 # Starting window size
@@ -14,7 +14,7 @@ window:
   padding:
     x: 0
     y: 0
-  gtk_theme_variant: dark
+  gtk_theme_variant: light
 
 # Disable cursor blinking
 cursor:
@@ -82,5 +82,5 @@ schemes:
       cyan:    '0x8ec07c'
       white:   '0xebdbb2'
 
-colors: *dark
+colors: *light
 
