--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -3,8 +3,8 @@
 # Fonts
 font:
   normal:
-    family: Fira Code
-  size: 12
+    family: Ubuntu Mono
+  size: 15
 
 # Starting window size
 window:
@@ -31,7 +31,69 @@ key_bindings:
   - { key: Space, mods: Shift, chars: "_" }
 
 schemes:
-  gruvbox_light: &light
+  github_light: &light
+    primary:
+      background: '0xffffff'
+      foreground: '0x586069'
+
+    # Normal colors
+    normal:
+      black:   '0x697179'
+      red:     '0xd03d3d'
+      green:   '0x14ce14'
+      yellow:  '0x949800'
+      blue:    '0x0451a5'
+      magenta: '0xbc05bc'
+      cyan:    '0x0598bc'
+      white:   '0x586069'
+
+    # Bright colors
+    bright:
+      black:   '0x666666'
+      red:     '0xcd3131'
+      green:   '0x14ce14'
+      yellow:  '0xb5ba00'
+      blue:    '0x0451a5'
+      magenta: '0xbc05bc'
+      cyan:    '0x0598bc'
+      white:   '0x586069'
+
+    indexed_colors:
+      - { index: 16, color: '0xd18616' }
+      - { index: 17, color: '0xcd3131' }
+
+  github_dark: &dark
+    primary:
+      background: '0x24292e'
+      foreground: '0xd1d5da'
+
+    # Normal colors
+    normal:
+      black:   '0x24292e'
+      red:     '0xf14c4c'
+      green:   '0x23d18b'
+      yellow:  '0xe2e210'
+      blue:    '0x3b8eea'
+      magenta: '0xbc3fbc'
+      cyan:    '0x29b7da'
+      white:   '0xd1d5da'
+
+    # Bright colors
+    bright:
+      black:   '0x666666'
+      red:     '0xf14c4c'
+      green:   '0x23d18b'
+      yellow:  '0xf5f543'
+      blue:    '0x3b8eea'
+      magenta: '0xd670d6'
+      cyan:    '0x29b7da'
+      white:   '0xd1d5da'
+
+    indexed_colors:
+      - { index: 16, color: '0xd18616' }
+      - { index: 17, color: '0xf14c4c' }
+
+  gruvbox_light: &gruv_light
     primary:
       background: '0xf9f5d7'
       foreground: '0x3c3836'
@@ -56,8 +118,7 @@ schemes:
       cyan:    '0x427b58'
       white:   '0x3c3836'
 
-  gruvbox_dark: &dark
-
+  gruvbox_dark: &gruv_dark
     primary:
       background: '0x1d2021'
       foreground: '0xebdbb2'
