--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -3,18 +3,18 @@
 # Fonts
 font:
   normal:
-    family: Fantasque Sans Mono
-  size: 15
+    family: Fira Code Medium
+  size: 14
 
 # Starting window size
 window:
   dimensions:
-    columns: 100
-    lines: 40
+    columns: 90
+    lines: 35
   padding:
     x: 5
     y: 5
-  gtk_theme_variant: light
+  gtk_theme_variant: dark
 
 # Disable cursor blinking
 cursor:
@@ -31,7 +31,7 @@ key_bindings:
   - { key: Space, mods: Shift, chars: "_" }
 
 schemes:
-  github_light: &light
+  github_light: &gh_light
     primary:
       background: '0xffffff'
       foreground: '0x586069'
@@ -62,7 +62,7 @@ schemes:
       - { index: 16, color: '0xd18616' }
       - { index: 17, color: '0xcd3131' }
 
-  github_dark: &dark
+  github_dark: &gh_dark
     primary:
       background: '0x24292e'
       foreground: '0xd1d5da'
@@ -93,7 +93,7 @@ schemes:
       - { index: 16, color: '0xd18616' }
       - { index: 17, color: '0xf14c4c' }
 
-  gruvbox_light: &gruv_light
+  gruvbox_light: &light
     primary:
       background: '0xf9f5d7'
       foreground: '0x3c3836'
@@ -118,7 +118,7 @@ schemes:
       cyan:    '0x427b58'
       white:   '0x3c3836'
 
-  gruvbox_dark: &gruv_dark
+  gruvbox_dark: &dark
     primary:
       background: '0x1d2021'
       foreground: '0xebdbb2'
@@ -143,5 +143,5 @@ schemes:
       cyan:    '0x8ec07c'
       white:   '0xebdbb2'
 
-colors: *light
+colors: *dark
 
