emacs minimal config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,11 @@
-font_family Ubuntu Mono
+font_family Fira Code Medium
 font_size 14.0
 
-map shift+space _
+remember_window_size no
+initial_window_width  90c
+initial_window_height 35c
+
+cursor_blink_interval 0
 
 # gruvbox-dark colorscheme for kitty
 # snazzy theme used as base
