--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
-font_family Fira Code Medium
-font_size 14.0
+font_family Ubuntu Mono
+font_size 16.0
 
 remember_window_size no
 initial_window_width  90c
