--- a/neovim/.config/nvim/old/coc-settings.json
+++ b/neovim/.config/nvim/old/coc-settings.json
@@ -1,3 +1,4 @@
 {
-    "rust-analyzer.inlayHints.enable": false
+    "rust-analyzer.inlayHints.enable": false,
+    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "typescriptreact", "typescript", "rust"]
 }
