--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -35,6 +35,7 @@ height = 30
 ;offset-y = 1%
 radius = 0.0
 fixed-center = false
+bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
