--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,8 +1,9 @@
+font-family = "Comic Code Medium"
 font-family = "Aporetic Sans Mono"
 font-variation = wght=300
 font-variation-bold = wght=500
-font-size = 15
-window-height = 40
-window-width = 128
+font-size = 14
+window-height = 45
+window-width = 110
 window-theme = system
 theme = light:rose-pine-dawn,dark:rose-pine
