--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -1,23 +1,24 @@
-// Zed settings
-//
-// For information on how to configure Zed, see the Zed
-// documentation: https://zed.dev/docs/configuring-zed
-//
-// To see all of Zed's default settings without changing your
-// custom settings, run `zed: open default settings` from the
-// command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "ui_font_size": 27,
+  "icon_theme": "Zed (Default)",
+  "telemetry": {
+    "diagnostics": true,
+    "metrics": false
+  },
+  "base_keymap": "VSCode",
+  "ui_font_size": 25,
   "ui_font_family": "Adwaita Sans",
   "buffer_font_size": 25,
-  "buffer_line_height": { "custom": 1.6 },
   "theme": {
     "mode": "system",
-    "light": "Nord Light",
-    "dark": "Nord"
+    "light": "Ayu Light",
+    "dark": "Ayu Dark"
   },
   "vim_mode": true,
   "buffer_font_family": "Comic Code Ligatures",
-  "buffer_font_weight": 500,
-  "relative_line_numbers": true
+  "relative_line_numbers": true,
+  "buffer_line_height": { "custom": 1.5 },
+  "toolbar": { "breadcrumbs": false, "quick_actions": false },
+  "project_panel": { "entry_spacing": "standard" },
+  "tabs": { "file_icons": true },
+  "git": { "inline_blame": { "enabled": false } }
 }
