--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,5 @@
-font-family = "Comic Code Medium"
-font-family = "Aporetic Sans Mono"
+font-family = "Comic Code"
+font-family = "Aporetic Serif Mono"
 font-variation = wght=300
 font-variation-bold = wght=500
 font-size = 14
